# bioCN

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  format_all.sh  pyproject.toml  pyrightconfig.json
src/: analyzer.py  api.py  cli.py  epub_parser.py
tests/: test_batch_performance.py  test_epub_e2e.py  test_keywords.py  test_svo.py  test_svo_batch.py  脂粉帝国.epub
