[project]
name = "biocn"
version = "0.1.0"
description = "Chinese bionic reading EPUB processor with DDParser grammar analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "ebooklib",
    "beautifulsoup4",
    "hanlp>=2.1.3",
    "rich>=14.2.0",
]

[project.scripts]
biocn = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
