[project]
name = "biocn"
version = "0.1.0"
description = "Chinese bionic reading EPUB processor with HanLP grammar analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "ebooklib",
    "beautifulsoup4",
    "hanlp>=2.1.3",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
biocn = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "basedpyright>=1.38.3",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "radon>=6.0.1",
    "ruff>=0.14.8",
]

[project.optional-dependencies]
dev = [
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
